--- a/AsignaturasLicenciatura.bib
+++ b/AsignaturasLicenciatura.bib
@@ -1,173 +1,528 @@
-@unpublished{Curso2026a,
-    author       = {},
-    title        = {Python for Computer Vision with OpenCV and Deep Learning},  
-    howpublished = {Udemy},
-    year = 2026,
-    month = 02}
+@unpublished{teach:ITSA:ProgramacionSistemasI:2005enejun,
+  title   = {Programación de Sistemas I},
+  year    = {2005},
+  comment = {ITSA — ene-jun 05}
+}
 
+@unpublished{teach:ITSA:SeminarioSistemasDigitales:2005julago,
+  title   = {Seminario de Sistemas Digitales y sus Aplicaciones},
+  year    = {2005},
+  comment = {ITSA — jul-ago 05}
+}
 
-@unpublished{Curso2025d,
-    author       = {},
-    title        = {El Nuevo Modelo Educativo 2024 para la transformación y consolidación de las Universidades del Subsistema Tecnológico},
-    howpublished = {Dirección General de Universidades Tecnológicas y Politécnicas},
-    year = 2025,
-    month = 10}
+@unpublished{teach:ITSA:SistemasDigitales:2005agodic,
+  title   = {Sistemas Digitales},
+  year    = {2005},
+  comment = {ITSA — ago-dic 05}
+}
 
+@unpublished{teach:ITSA:ArquitecturaComputadorasII:2005agodic,
+  title   = {Arquitectura de Computadoras II},
+  year    = {2005},
+  comment = {ITSA — ago-dic 05}
+}
 
-@unpublished{Curso2025c,
-    author       = {},
-    title        = {Writing Skills},
-    howpublished = {Elsevier Researcher Academy},
-    year = 2025,
-    month = 06}
+@unpublished{teach:ITSA:ArquitecturaComputadorasI:2006enejun,
+  title   = {Arquitectura de Computadoras I},
+  year    = {2006},
+  comment = {ITSA — ene-jun 06}
+}
 
+@unpublished{teach:ITSA:ArquitecturaComputadorasII:2006enejun,
+  title   = {Arquitectura de Computadoras II},
+  year    = {2006},
+  comment = {ITSA — ene-jun 06}
+}
 
-@unpublished{Curso2025b,
-    author       = {},
-    title        = {Fundamentals of publishing},
-    howpublished = {Elsevier Researcher Academy},
-    year = 2025,
-    month = 04}
+@unpublished{teach:ITSA:ProgramacionSistemasI:2006julago,
+  title   = {Programación de Sistemas I},
+  year    = {2006},
+  comment = {ITSA — jul-ago 06}
+}
 
-@unpublished{Curso2025a,
-    author       = {},
-    title        = {Introduction to Modern AI},
-    howpublished = {Cisco Networking Academy},
-    year = 2025,
-    month = 03}
+@unpublished{teach:ITSA:LenguajeEnsamblador:2006agodic,
+  title   = {Lenguaje Ensamblador},
+  year    = {2006},
+  comment = {ITSA — ago-dic 06}
+}
 
-@unpublished{Curso2024b,
-    author       = {},
-    title        = {OpenAI Python API Bootcamp: Learn to use AI, GPT, and more!},  
-    howpublished = {Udemy},
-    year = 2024,
-    month = 09}
+@unpublished{teach:UPP:HerramientasOfimaticas:2006sepdic,
+  title   = {Herramientas Ofimáticas},
+  year    = {2006},
+  comment = {UPP — sep-dic 06}
+}
 
-@unpublished{Curso2024a,
-    author       = {},
-    title        = {Mendix Rapid Developer Certification.},  
-    howpublished = {SIEMENS},
-    year = 2024,
-    month = 02}
+@unpublished{teach:UPP:ArquitecturasAvanzadas:2006sepdic,
+  title   = {Arquitecturas Avanzadas de Computadoras},
+  year    = {2006},
+  comment = {UPP — sep-dic 06}
+}
 
-@unpublished{Curso2023a,
-    author       = {},
-    title        = {Android Firebase Firestore - Masterclass - Build a Shop App},
-    howpublished = {Udemy},
-    year = 2023,
-    month = 12}
+@unpublished{teach:ITSA:Interfases:2007enejun,
+  title   = {Interfases},
+  year    = {2007},
+  comment = {ITSA — ene-jun 07}
+}
 
-@unpublished{Curso2023d,
-    author       = {},
-    title        = {Partnet: NGD Linux Unhatched},
-    howpublished = {Cisco Networking Academy},
-    year = 2023,
-    month = 08}
+@unpublished{teach:ITSA:LenguajeEnsamblador:2007agodic,
+  title   = {Lenguaje Ensamblador},
+  year    = {2007},
+  comment = {ITSA — ago-dic 07}
+}
 
-@unpublished{Curso2023b,
-    author       = {},
-    title        = {International Summer School},
-    howpublished = {University of Louisianna at Laffayette},
-    year = 2023,
-    month = 5}
+@unpublished{teach:ITSA:GraficacionComputadora:2007agodic,
+  title   = {Graficación por Computadora},
+  year    = {2007},
+  comment = {ITSA — ago-dic 07}
+}
 
-@unpublished{Curso2023c,
-    author       = {},
-    title        = {Formal Languages And Automata Theory},
-    howpublished = {Udemy},
-    year = 2023,
-    month = 3}
+@unpublished{teach:ITSA:Interfases:2008enejun,
+  title   = {Interfases},
+  year    = {2008},
+  comment = {ITSA — ene-jun 08}
+}
 
-@unpublished{Curso2023e,
-    author       = {},
-    title        = {Workshop: Inteligencia Artificial desde cero},
-    howpublished = {Oracle},
-    year = 2023,
-    month = 3}
+@unpublished{teach:ITSA:InteligenciaArtificial:2008enejun,
+  title   = {Inteligencia Artificial},
+  year    = {2008},
+  comment = {ITSA — ene-jun 08}
+}
 
-@unpublished{Curso2022cc,
-    author       = {},
-    title        = {Pautas para un Lenguaje Incluyente y sin Discriminación en la Docencia},
-    howpublished = {CONAPRED-MéxicoX},
-    year = 2022,
-    month = 12}
+@unpublished{teach:ITSA:LenguajeEnsamblador:2008agodic,
+  title   = {Lenguaje Ensamblador},
+  year    = {2008},
+  comment = {ITSA — ago-dic 08}
+}
 
+@unpublished{teach:ITSA:GraficacionComputadora:2008agodic,
+  title   = {Graficación por Computadora},
+  year    = {2008},
+  comment = {ITSA — ago-dic 08}
+}
 
-@unpublished{Curso2022a,
-    author       = {},
-    title        = {The Complete Android 12 \& Kotlin Development Masterclass},
-    howpublished = {Udemy},
-    year = 2022,
-    month = 12}
+@unpublished{teach:ITSA:Interfases:2009enejun,
+  title   = {Interfases},
+  year    = {2009},
+  comment = {ITSA — ene-jun 09}
+}
 
-@unpublished{Curso2022b,
-    author       = {},
-    title        = {Mastering MQTT Protocol A Beginner's to Advance Level Guide},
-    howpublished = {Udemy},
-    year = 2022,
-    month = 7}
+@unpublished{teach:ITSA:InteligenciaArtificial:2009enejun,
+  title   = {Inteligencia Artificial},
+  year    = {2009},
+  comment = {ITSA — ene-jun 09}
+}
 
-@unpublished{Curso2022c,
-    author       = {},
-    title        = {Machine Learning, Data Science and Deep Learning with Python.},
-    howpublished = {Udemy},
-    year = 2022,
-    month = 4}
+@unpublished{teach:UPV:CircuitosLogicos:2009sepdic,
+  title   = {Circuitos Lógicos},
+  year    = {2009},
+  comment = {UPV — sep-dic 09}
+}
 
-@unpublished{Curso2022d,
-    author       = {},
-    title        = {2022 Ultimate Guide to Raspberry Pi  Tips, Tricks and Hacks.},
-    howpublished = {Udemy},
-    year = 2022,
-    month = 2}
+@unpublished{teach:UPV:OrganizacionComputadoras:2009sepdic,
+  title   = {Organización de Computadoras},
+  year    = {2009},
+  comment = {UPV — sep-dic 09}
+}
 
-@unpublished{Curso2021a,
-    author       = {},
-    title        = {Resilencia Educativa},
-    howpublished = {Centro Regional de Formación Docente e Investigación Educativa},
-    year = 2021,
-    month = 3}
+@unpublished{teach:UPV:POO:2009sepdic,
+  title   = {Programación Orientada a Objetos},
+  year    = {2009},
+  comment = {UPV — sep-dic 09}
+}
 
-@unpublished{Curso2017a,
-    author       = {},
-    title        = {Desarrollo de Estrategias de Tutorias y Asesoría en el Aula},
-    howpublished = {Universidad Polit\'ecnica de Victoria},
-    year = 2017,
-    month = 12}
+@unpublished{teach:UPV:POO:2010eneabr,
+  title   = {Programación Orientada a Objetos},
+  year    = {2010},
+  comment = {UPV — ene-abr 10}
+}
 
-@unpublished{Curso2013a,
-    author       = {},
-    title        = {Curso-Taller de Actualización Docente},
-    howpublished = {Universidad Polit\'ecnica de Victoria},
-    year = 2013,
-    month = 4}
+@unpublished{teach:UPV:ArquitecturaProcesadores:2010eneabr,
+  title   = {Arquitectura de Procesadores},
+  year    = {2010},
+  comment = {UPV — ene-abr 10}
+}
 
-@unpublished{Curso2012a,
-    author       = {},
-    title        = {Formaci\'on Universitaria Did\'actica Especial},
-    howpublished = {Universidad Polit\'ecnica de Victoria},
-    year = 2012,
-    month = 4}
+@unpublished{teach:UPV:SistemasEmbebidos:2010mayago,
+  title   = {Sistemas Embebidos},
+  year    = {2010},
+  comment = {UPV — may-ago 10}
+}
 
-@unpublished{Curso2010a,
-    author       = {},
-    title        = {Implantaci\'on del Modelo Educativo Basado en Competencias (en línea)},
-    howpublished = {Universidad Polit\'ecnica de Puebla},
-    year = 2010,
-    month = 5}
+@unpublished{teach:UPV:SistemasOperativos:2010mayago,
+  title   = {Sistemas Operativos},
+  year    = {2010},
+  comment = {UPV — may-ago 10}
+}
 
-@unpublished{Curso2007a,
-    author       = {},
-    title        = {Business Foundations for Scientists},
-    howpublished = {Instituto Nacional de Astrofísica, Óptica y Electrónica, Puebla, Mexico},
-    year = 2007,
-    month = 5}
+@unpublished{teach:UPV:ArquitecturaProcesadores:2010mayago,
+  title   = {Arquitectura de Procesadores},
+  year    = {2010},
+  comment = {UPV — may-ago 10}
+}
 
-@unpublished{Curso2003a,
-    author       = {},
-    title        = {Introduccion a Microsoft SQL Server},
-    howpublished = {Instituto Nacional de Astrofísica, Óptica y Electrónica, Puebla, Mexico},
-    year = 2003,
-    month = 12}
+@unpublished{teach:UPV:SistemasEmbebidos:2011mayago,
+  title   = {Sistemas Embebidos},
+  year    = {2011},
+  comment = {UPV — may-ago 11}
+}
 
+@unpublished{teach:UPV:ArquitecturaProcesadores:2011agodic,
+  title   = {Arquitectura de Procesadores},
+  year    = {2011},
+  comment = {UPV — ago-dic 11}
+}
+
+@unpublished{teach:UPV:SistemasEmbebidos:2011agodic,
+  title   = {Sistemas Embebidos},
+  year    = {2011},
+  comment = {UPV — ago-dic 11}
+}
+
+@unpublished{teach:UPV:ArquitecturaProcesadores:2012eneabr,
+  title   = {Arquitectura de Procesadores},
+  year    = {2012},
+  comment = {UPV — ene-abr 12}
+}
+
+@unpublished{teach:UPV:SistemasEmbebidos:2012mayago,
+  title   = {Sistemas Embebidos},
+  year    = {2012},
+  comment = {UPV — may-ago 12}
+}
+
+@unpublished{teach:UPV:IntGraficacion:2012agodic,
+  title   = {Introducción a la Graficación por Computadora},
+  year    = {2012},
+  comment = {UPV — ago-dic 12}
+}
+
+@unpublished{teach:UPV:IntGraficacion:2013eneabr,
+  title   = {Introducción a la Graficación por Computadora},
+  year    = {2013},
+  comment = {UPV — ene-abr 13}
+}
+
+@unpublished{teach:UPV:GraficacionAvanzada:2013eneabr,
+  title   = {Graficación por Computadora Avanzada},
+  year    = {2013},
+  comment = {UPV — ene-abr 13}
+}
+
+@unpublished{teach:UPV:GraficacionAvanzada:2013mayago,
+  title   = {Graficación por Computadora Avanzada},
+  year    = {2013},
+  comment = {UPV — may-ago 13}
+}
+
+@unpublished{teach:UPV:ComputoMovil:2013mayago,
+  title   = {Cómputo en Dispositivos Móviles},
+  year    = {2013},
+  comment = {UPV — may-ago 13}
+}
+
+@unpublished{teach:UPV:SistemasEmbebidos:2013mayago,
+  title   = {Sistemas Embebidos},
+  year    = {2013},
+  comment = {UPV — may-ago 13}
+}
+
+@unpublished{teach:UPV:ComputoMovil:2013sepdic,
+  title   = {Cómputo en Dispositivos Móviles},
+  year    = {2013},
+  comment = {UPV — sep-dic 13}
+}
+
+@unpublished{teach:UPV:GraficacionAvanzada:2014eneabr,
+  title   = {Graficación por Computadora Avanzada},
+  year    = {2014},
+  comment = {UPV — ene-abr 14}
+}
+
+@unpublished{teach:UPV:ProcesamientoParalelo:2014eneabr,
+  title   = {Procesamiento Paralelo y Distribuido},
+  year    = {2014},
+  comment = {UPV — ene-abr 14}
+}
+
+@unpublished{teach:UPV:ComputoMovil:2014mayago,
+  title   = {Cómputo en Dispositivos Móviles},
+  year    = {2014},
+  comment = {UPV — may-ago 14}
+}
+
+@unpublished{teach:UPV:SistemasEmbebidos:2014mayago,
+  title   = {Sistemas Embebidos},
+  year    = {2014},
+  comment = {UPV — may-ago 14}
+}
+
+@unpublished{teach:UPV:ComputoMovil:2014sepdic,
+  title   = {Cómputo en Dispositivos Móviles},
+  year    = {2014},
+  comment = {UPV — sep-dic 14}
+}
+
+@unpublished{teach:UPV:ComputoMovil:2015mayago,
+  title   = {Cómputo en Dispositivos Móviles},
+  year    = {2015},
+  comment = {UPV — may-ago 15}
+}
+
+@unpublished{teach:UPV:ComputoMovil:2015sepdic,
+  title   = {Cómputo en Dispositivos Móviles},
+  year    = {2015},
+  comment = {UPV — sep-dic 15}
+}
+
+@unpublished{teach:UPV:GraficacionAvanzada:2016eneabr,
+  title   = {Graficación por Computadora Avanzada},
+  year    = {2016},
+  comment = {UPV — ene-abr 16}
+}
+
+@unpublished{teach:UPV:ComputoMovil:2016mayago,
+  title   = {Cómputo en Dispositivos Móviles},
+  year    = {2016},
+  comment = {UPV — may-ago 16}
+}
+
+@unpublished{teach:UPV:ComputoMovil:2016sepdic,
+  title   = {Cómputo en Dispositivos Móviles},
+  year    = {2016},
+  comment = {UPV — sep-dic 16}
+}
+
+@unpublished{teach:UPV:GraficacionAvanzada:2017eneabr,
+  title   = {Graficación por Computadora Avanzada},
+  year    = {2017},
+  comment = {UPV — ene-abr 17}
+}
+
+@unpublished{teach:UPV:ComputoMovil:2017mayago,
+  title   = {Cómputo en Dispositivos Móviles},
+  year    = {2017},
+  comment = {UPV — may-ago 17}
+}
+
+@unpublished{teach:UPV:IntGraficacion:2017sepdic,
+  title   = {Introducción a la Graficación por Computadora},
+  year    = {2017},
+  comment = {UPV — sep-dic 17}
+}
+
+@unpublished{teach:UPV:GraficacionAvanzada:2018eneabr,
+  title   = {Graficación por Computadora Avanzada},
+  year    = {2018},
+  comment = {UPV — ene-abr 18}
+}
+
+@unpublished{teach:UPV:IntGraficacion:2018eneabr,
+  title   = {Introducción a la Graficación por Computadora},
+  year    = {2018},
+  comment = {UPV — ene-abr 18}
+}
+
+@unpublished{teach:UPV:ComputoMovil:2018mayago,
+  title   = {Cómputo en Dispositivos Móviles},
+  year    = {2018},
+  comment = {UPV — may-ago 18}
+}
+
+@unpublished{teach:UPV:IntGraficacion:2018sepdic,
+  title   = {Introducción a la Graficación por Computadora},
+  year    = {2018},
+  comment = {UPV — sep-dic 18}
+}
+
+@unpublished{teach:UPV:GraficacionAvanzada:2019eneabr,
+  title   = {Graficación por Computadora Avanzada},
+  year    = {2019},
+  comment = {UPV — ene-abr 19}
+}
+
+@unpublished{teach:UPV:IntGraficacion:2019eneabr,
+  title   = {Introducción a la Graficación por Computadora},
+  year    = {2019},
+  comment = {UPV — ene-abr 19}
+}
+
+@unpublished{teach:UPV:ComputoMovil:2019mayago,
+  title   = {Cómputo en Dispositivos Móviles},
+  year    = {2019},
+  comment = {UPV — may-ago 19}
+}
+
+@unpublished{teach:UPV:IntGraficacion:2019sepdic,
+  title   = {Introducción a la Graficación por Computadora},
+  year    = {2019},
+  comment = {UPV — sep-dic 19}
+}
+
+@unpublished{teach:UPV:GraficacionAvanzada:2020eneabr,
+  title   = {Graficación por Computadora Avanzada},
+  year    = {2020},
+  comment = {UPV — ene-abr 20}
+}
+
+@unpublished{teach:UPV:IntGraficacion:2020eneabr,
+  title   = {Introducción a la Graficación por Computadora},
+  year    = {2020},
+  comment = {UPV — ene-abr 20}
+}
+
+@unpublished{teach:ULSA:AdquisicionImagenes:2020enemay,
+  title   = {Adquisición y Procesamiento de Imágenes},
+  year    = {2020},
+  comment = {ULSA — ene-may 20}
+}
+
+@unpublished{teach:UPV:ComputoMovil:2020mayago,
+  title   = {Cómputo en Dispositivos Móviles},
+  year    = {2020},
+  comment = {UPV — may-ago 20}
+}
+
+@unpublished{teach:UPV:LenguajesAutomatas:2020sepdic,
+  title   = {Lenguajes y Autómatas},
+  year    = {2020},
+  comment = {UPV — sep-dic 20}
+}
+
+@unpublished{teach:UPV:FPOO:2021eneabr,
+  title   = {Fundamentos de Programación Orientada a Objetos},
+  year    = {2021},
+  comment = {UPV — ene-abr 21}
+}
+
+@unpublished{teach:UPV:ProgramacionMovil:2021mayago,
+  title   = {Programación Móvil},
+  year    = {2021},
+  comment = {UPV — may-ago 21}
+}
+
+@unpublished{teach:UPV:LenguajesAutomatas:2021sepdic,
+  title   = {Lenguajes y Autómatas},
+  year    = {2021},
+  comment = {UPV — sep-dic 21}
+}
+
+@unpublished{teach:UPV:ProgramacionMovil:2021sepdic,
+  title   = {Programación Móvil},
+  year    = {2021},
+  comment = {UPV — sep-dic 21}
+}
+
+@unpublished{teach:UPV:SistemasInteligentes:2022eneabr,
+  title   = {Sistemas Inteligentes},
+  year    = {2022},
+  comment = {UPV — ene-abr 22}
+}
+
+@unpublished{teach:UPV:ProgramacionMovil:2022mayago,
+  title   = {Programación Móvil},
+  year    = {2022},
+  comment = {UPV — may-ago 22}
+}
+
+@unpublished{teach:UPV:ProgramacionMovil:2022sepdic,
+  title   = {Programación Móvil},
+  year    = {2022},
+  comment = {UPV — sep-dic 22}
+}
+
+@unpublished{teach:UPV:POO:2022sepdic,
+  title   = {Programación Orientada a Objetos},
+  year    = {2022},
+  comment = {UPV — sep-dic 22}
+}
+
+@unpublished{teach:UPV:LenguajesAutomatas:2023eneabr,
+  title   = {Lenguajes y Autómatas},
+  year    = {2023},
+  comment = {UPV — ene-abr 23}
+}
+
+@unpublished{teach:UPV:SistemasInteligentes:2023mayago,
+  title   = {Sistemas Inteligentes},
+  year    = {2023},
+  comment = {UPV — may-ago 23}
+}
+
+@unpublished{teach:UPV:FPOO:2023mayago,
+  title   = {Fundamentos de Programación Orientada a Objetos},
+  year    = {2023},
+  comment = {UPV — may-ago 23}
+}
+
+@unpublished{teach:UPV:ProgramacionMovil:2023sepdic,
+  title   = {Programación Móvil},
+  year    = {2023},
+  comment = {UPV — sep-dic 23}
+}
+
+@unpublished{teach:UPV:LenguajesAutomatas:2024eneabr,
+  title   = {Lenguajes y Autómatas},
+  year    = {2024},
+  comment = {UPV — ene-abr 24}
+}
+
+@unpublished{teach:UPV:ProgramacionMovil:2024eneabr,
+  title   = {Programación Móvil},
+  year    = {2024},
+  comment = {UPV — ene-abr 24}
+}
+
+@unpublished{teach:UPV:POO:2024mayago,
+  title   = {Programación Orientada a Objetos},
+  year    = {2024},
+  comment = {UPV — may-ago 24}
+}
+
+@unpublished{teach:UPV:SistemasInteligentes:2024mayago,
+  title   = {Sistemas Inteligentes},
+  year    = {2024},
+  comment = {UPV — may-ago 24}
+}
+
+@unpublished{teach:UPV:ProgramacionMovil:2024sepdic,
+  title   = {Programación Móvil},
+  year    = {2024},
+  comment = {UPV — sep-dic 24}
+}
+
+@unpublished{teach:UPV:SistemasInteligentes:2025eneabr,
+  title   = {Sistemas Inteligentes},
+  year    = {2025},
+  comment = {UPV — ene-abr 25}
+}
+
+@unpublished{teach:UPV:ProgramacionMovil:2025mayago,
+  title   = {Programación Móvil},
+  year    = {2025},
+  comment = {UPV — may-ago 25}
+}
+
+@unpublished{teach:UPV:ProyectoIntegradorI:2025mayago,
+  title   = {Proyecto Integrador I},
+  year    = {2025},
+  comment = {UPV — may-ago 25}
+}
+
+@unpublished{teach:UPV:DesarrolloAppsMoviles:2025sepdic,
+  title   = {Desarrollo de Aplicaciones Móviles},
+  year    = {2025},
+  comment = {UPV — sep-dic 25}
+}
+
+@unpublished{teach:UPV:SistemasInteligentes:2026eneabr,
+  title   = {Sistemas Inteligentes},
+  year    = {2026},
+  comment = {UPV — ene-abr 26}
+}
+
+@unpublished{teach:UPV:DesarrolloAppsMoviles:2026eneabr,
+  title   = {Desarrollo de Aplicaciones Móviles},
+  year    = {2026},
+  comment = {UPV — ene-abr 26}
+}
 
