--- a/AsignaturasLicenciatura.bib
+++ b/AsignaturasLicenciatura.bib
@@ -1,293 +1,703 @@
-@unpublished{course2026a,
-  title   = {Sistemas Inteligentes},
-  year    = {2026},
-  month   = {4},
-  howpublished = {UPV, ene-abr 26}
+@misc{Martinez2026_Desarrollo_aplicaciones_moviles,
+  title     = {Desarrollo de Aplicaciones Móviles},
+  author    = {Martinez, Luis},
+  year      = {2026},
+  month     = {apr},
+  comment   = {UPV ene-abr 26}
 }
 
-@unpublished{course2026b,
-  title   = {Desarrollo de Aplicaciones Móviles},
-  year    = {2026},
-  month   = {4},
-  howpublished = {UPV, ene-abr 26}
+@misc{Martinez2026_Sistemas_inteligentes,
+  title     = {Sistemas Inteligentes},
+  author    = {Martinez, Luis},
+  year      = {2026},
+  month     = {apr},
+  comment   = {UPV ene-abr 26}
 }
 
-@unpublished{course2025a,
-  title   = {Sistemas Inteligentes},
-  year    = {2025},
-  month   = {4},
-  howpublished = {UPV, ene-abr 25}
+@misc{Martinez2025_Desarrollo_aplicaciones_moviles,
+  title     = {Desarrollo de Aplicaciones Móviles},
+  author    = {Martinez, Luis},
+  year      = {2025},
+  month     = {dec},
+  comment   = {UPV sep-dic 25}
 }
 
-@unpublished{course2025b,
-  title   = {Programación Móvil},
-  year    = {2025},
-  month   = {8},
-  howpublished = {UPV, may-ago 25}
+@misc{Martinez2025_Proyecto_integrador,
+  title     = {Proyecto Integrador I},
+  author    = {Martinez, Luis},
+  year      = {2025},
+  month     = {aug},
+  comment   = {UPV may-ago 25}
 }
 
-@unpublished{course2025c,
-  title   = {Proyecto Integrador I},
-  year    = {2025},
-  month   = {8},
-  howpublished = {UPV, may-ago 25}
+@misc{Martinez2025_Programacion_movil,
+  title     = {Programación Móvil},
+  author    = {Martinez, Luis},
+  year      = {2025},
+  month     = {aug},
+  comment   = {UPV may-ago 25}
 }
 
-@unpublished{course2025d,
-  title   = {Desarrollo de Aplicaciones Móviles},
-  year    = {2025},
-  month   = {12},
-  howpublished = {UPV, sep-dic 25}
+@misc{Martinez2025_Sistemas_inteligentes,
+  title     = {Sistemas Inteligentes},
+  author    = {Martinez, Luis},
+  year      = {2025},
+  month     = {apr},
+  comment   = {UPV ene-abr 25}
 }
 
-@unpublished{course2024a,
-  title   = {Lenguajes y Autómatas},
-  year    = {2024},
-  month   = {4},
-  howpublished = {UPV, ene-abr 24}
+@misc{Martinez2024_Programacion_movil,
+  title     = {Programación Móvil},
+  author    = {Martinez, Luis},
+  year      = {2024},
+  month     = {dec},
+  comment   = {UPV sep-dic 24}
 }
 
-@unpublished{course2024b,
-  title   = {Programación Móvil},
-  year    = {2024},
-  month   = {4},
-  howpublished = {UPV, ene-abr 24}
+@misc{Martinez2024_Sistemas_inteligentes,
+  title     = {Sistemas Inteligentes},
+  author    = {Martinez, Luis},
+  year      = {2024},
+  month     = {aug},
+  comment   = {UPV may-ago 24}
 }
 
-@unpublished{course2024c,
-  title   = {Programación Orientada a Objetos},
-  year    = {2024},
-  month   = {8},
-  howpublished = {UPV, may-ago 24}
+@misc{Martinez2024_Programacion_orientada_objetos,
+  title     = {Programación Orientada a Objetos},
+  author    = {Martinez, Luis},
+  year      = {2024},
+  month     = {aug},
+  comment   = {UPV may-ago 24}
 }
 
-@unpublished{course2024d,
-  title   = {Sistemas Inteligentes},
-  year    = {2024},
-  month   = {8},
-  howpublished = {UPV, may-ago 24}
+@misc{Martinez2024_Programacion_movil_ene_abr,
+  title     = {Programación Móvil},
+  author    = {Martinez, Luis},
+  year      = {2024},
+  month     = {apr},
+  comment   = {UPV ene-abr 24}
 }
 
-@unpublished{course2024e,
-  title   = {Programación Móvil},
-  year    = {2024},
-  month   = {12},
-  howpublished = {UPV, sep-dic 24}
+@misc{Martinez2024_Lenguajes_automata,
+  title     = {Lenguajes y Autómatas},
+  author    = {Martinez, Luis},
+  year      = {2024},
+  month     = {apr},
+  comment   = {UPV ene-abr 24}
 }
 
-@unpublished{course2023a,
-  title   = {Lenguajes y Autómatas},
-  year    = {2023},
-  month   = {4},
-  howpublished = {UPV, ene-abr 23}
+@misc{Martinez2023_Programacion_movil,
+  title     = {Programación Móvil},
+  author    = {Martinez, Luis},
+  year      = {2023},
+  month     = {dec},
+  comment   = {UPV sep-dic 23}
 }
 
-@unpublished{course2023b,
-  title   = {Sistemas Inteligentes},
-  year    = {2023},
-  month   = {8},
-  howpublished = {UPV, may-ago 23}
+@misc{Martinez2023_Fundamentos_programacion_objetos,
+  title     = {Fundamentos de Programación Orientada a Objetos},
+  author    = {Martinez, Luis},
+  year      = {2023},
+  month     = {aug},
+  comment   = {UPV may-ago 23}
 }
 
-@unpublished{course2023c,
-  title   = {Fundamentos de Programación Orientada a Objetos},
-  year    = {2023},
-  month   = {8},
-  howpublished = {UPV, may-ago 23}
+@misc{Martinez2023_Sistemas_inteligentes,
+  title     = {Sistemas Inteligentes},
+  author    = {Martinez, Luis},
+  year      = {2023},
+  month     = {aug},
+  comment   = {UPV may-ago 23}
 }
 
-@unpublished{course2023d,
-  title   = {Programación Móvil},
-  year    = {2023},
-  month   = {12},
-  howpublished = {UPV, sep-dic 23}
+@misc{Martinez2023_Lenguajes_automata,
+  title     = {Lenguajes y Autómatas},
+  author    = {Martinez, Luis},
+  year      = {2023},
+  month     = {apr},
+  comment   = {UPV ene-abr 23}
 }
 
-@unpublished{course2022a,
-  title   = {Sistemas Inteligentes},
-  year    = {2022},
-  month   = {4},
-  howpublished = {UPV, ene-abr 22}
+@misc{Martinez2022_Programacion_orientada_objetos,
+  title     = {Programación Orientada a Objetos},
+  author    = {Martinez, Luis},
+  year      = {2022},
+  month     = {dec},
+  comment   = {UPV sep-dic 22}
 }
 
-@unpublished{course2022b,
-  title   = {Programación Móvil},
-  year    = {2022},
-  month   = {8},
-  howpublished = {UPV, may-ago 22}
+@misc{Martinez2022_Programacion_movil_sep_dic,
+  title     = {Programación Móvil},
+  author    = {Martinez, Luis},
+  year      = {2022},
+  month     = {dec},
+  comment   = {UPV sep-dic 22}
 }
 
-@unpublished{course2022c,
-  title   = {Programación Móvil},
-  year    = {2022},
-  month   = {12},
-  howpublished = {UPV, sep-dic 22}
+@misc{Martinez2022_Programacion_movil_may_ago,
+  title     = {Programación Móvil},
+  author    = {Martinez, Luis},
+  year      = {2022},
+  month     = {aug},
+  comment   = {UPV may-ago 22}
 }
 
-@unpublished{course2022d,
-  title   = {Programación Orientada a Objetos},
-  year    = {2022},
-  month   = {12},
-  howpublished = {UPV, sep-dic 22}
+@misc{Martinez2022_Sistemas_inteligentes,
+  title     = {Sistemas Inteligentes},
+  author    = {Martinez, Luis},
+  year      = {2022},
+  month     = {apr},
+  comment   = {UPV ene-abr 22}
 }
 
-@unpublished{course2021a,
-  title   = {Fundamentos de Programación Orientada a Objetos},
-  year    = {2021},
-  month   = {4},
-  howpublished = {UPV, ene-abr 21}
+@misc{Martinez2021_Programacion_movil_sep_dic,
+  title     = {Programación Móvil},
+  author    = {Martinez, Luis},
+  year      = {2021},
+  month     = {dec},
+  comment   = {UPV sep-dic 21}
 }
 
-@unpublished{course2021b,
-  title   = {Programación Móvil},
-  year    = {2021},
-  month   = {8},
-  howpublished = {UPV, may-ago 21}
+@misc{Martinez2021_Lenguajes_automata,
+  title     = {Lenguajes y Autómatas},
+  author    = {Martinez, Luis},
+  year      = {2021},
+  month     = {dec},
+  comment   = {UPV sep-dic 21}
 }
 
-@unpublished{course2021c,
-  title   = {Lenguajes y Autómatas},
-  year    = {2021},
-  month   = {12},
-  howpublished = {UPV, sep-dic 21}
+@misc{Martinez2021_Programacion_movil_may_ago,
+  title     = {Programación Móvil},
+  author    = {Martinez, Luis},
+  year      = {2021},
+  month     = {aug},
+  comment   = {UPV may-ago 21}
 }
 
-@unpublished{course2021d,
-  title   = {Programación Móvil},
-  year    = {2021},
-  month   = {12},
-  howpublished = {UPV, sep-dic 21}
+@misc{Martinez2021_Fundamentos_programacion_objetos,
+  title     = {Fundamentos de Programación Orientada a Objetos},
+  author    = {Martinez, Luis},
+  year      = {2021},
+  month     = {apr},
+  comment   = {UPV ene-abr 21}
 }
 
-@unpublished{course2020a,
-  title   = {Graficación por Computadora Avanzada},
-  year    = {2020},
-  month   = {4},
-  howpublished = {UPV, ene-abr 20}
+@misc{Martinez2020_Lenguajes_automata,
+  title     = {Lenguajes y Autómatas},
+  author    = {Martinez, Luis},
+  year      = {2020},
+  month     = {dec},
+  comment   = {UPV sep-dic 20}
 }
 
-@unpublished{course2020b,
-  title   = {Introducción a la Graficación por Computadora},
-  year    = {2020},
-  month   = {4},
-  howpublished = {UPV, ene-abr 20}
+@misc{Martinez2020_Computo_dispositivos_moviles,
+  title     = {Cómputo en Dispositivos Móviles},
+  author    = {Martinez, Luis},
+  year      = {2020},
+  month     = {aug},
+  comment   = {UPV may-ago 20}
 }
 
-@unpublished{course2020c,
-  title   = {Adquisición y Procesamiento de Imágenes},
-  year    = {2020},
-  month   = {5},
-  howpublished = {ULSA, ene-may 20}
+@misc{Martinez2020_Adquisicion_procesamiento_imagenes,
+  title     = {Adquistion y Procesamiento de Imágenes},
+  author    = {Martinez, Luis},
+  year      = {2020},
+  month     = {may},
+  comment   = {ULSA ene-may 20}
 }
 
-@unpublished{course2020d,
-  title   = {Cómputo en Dispositivos Móviles},
-  year    = {2020},
-  month   = {8},
-  howpublished = {UPV, may-ago 20}
+@misc{Martinez2020_Introduccion_graficacion_computadora_ene_abr,
+  title     = {Introducción a la Graficación por Computadora},
+  author    = {Martinez, Luis},
+  year      = {2020},
+  month     = {apr},
+  comment   = {UPV ene-abr 20}
 }
 
-@unpublished{course2020e,
-  title   = {Lenguajes y Autómatas},
-  year    = {2020},
-  month   = {12},
-  howpublished = {UPV, sep-dic 20}
+@misc{Martinez2020_Graficacion_computadora_avanzada,
+  title     = {Graficación por Computadora Avanzada},
+  author    = {Martinez, Luis},
+  year      = {2020},
+  month     = {apr},
+  comment   = {UPV ene-abr 20}
 }
 
-@unpublished{course2019a,
-  title   = {Graficación por Computadora Avanzada},
-  year    = {2019},
-  month   = {4},
-  howpublished = {UPV, ene-abr 19}
+@misc{Martinez2019_Introduccion_graficacion_computadora_sep_dic,
+  title     = {Introducción a la Graficación por Computadora},
+  author    = {Martinez, Luis},
+  year      = {2019},
+  month     = {dec},
+  comment   = {UPV sep-dic 19}
 }
 
-@unpublished{course2019b,
-  title   = {Introducción a la Graficación por Computadora},
-  year    = {2019},
-  month   = {4},
-  howpublished = {UPV, ene-abr 19}
+@misc{Martinez2019_Computo_dispositivos_moviles,
+  title     = {Cómputo en Dispositivos Móviles},
+  author    = {Martinez, Luis},
+  year      = {2019},
+  month     = {aug},
+  comment   = {UPV may-ago 19}
 }
 
-@unpublished{course2019c,
-  title   = {Cómputo en Dispositivos Móviles},
-  year    = {2019},
-  month   = {8},
-  howpublished = {UPV, may-ago 19}
+@misc{Martinez2019_Introduccion_graficacion_computadora_ene_abr,
+  title     = {Introducción a la Graficación por Computadora},
+  author    = {Martinez, Luis},
+  year      = {2019},
+  month     = {apr},
+  comment   = {UPV ene-abr 19}
 }
 
-@unpublished{course2019d,
-  title   = {Introducción a la Graficación por Computadora},
-  year    = {2019},
-  month   = {12},
-  howpublished = {UPV, sep-dic 19}
+@misc{Martinez2019_Graficacion_computadora_avanzada,
+  title     = {Graficación por Computadora Avanzada},
+  author    = {Martinez, Luis},
+  year      = {2019},
+  month     = {apr},
+  comment   = {UPV ene-abr 19}
 }
 
-@unpublished{course2018a,
-  title   = {Graficación por Computadora Avanzada},
-  year    = {2018},
-  month   = {4},
-  howpublished = {UPV, ene-abr 18}
+@misc{Martinez2018_Introduccion_graficacion_computadora_sep_dic,
+  title     = {Introducción a la Graficación por Computadora},
+  author    = {Martinez, Luis},
+  year      = {2018},
+  month     = {dec},
+  comment   = {UPV sep-dic 18}
 }
 
-@unpublished{course2018b,
-  title   = {Introducción a la Graficación por Computadora},
-  year    = {2018},
-  month   = {4},
-  howpublished = {UPV, ene-abr 18}
+@misc{Martinez2018_Computo_dispositivos_moviles,
+  title     = {Cómputo en Dispositivos Móviles},
+  author    = {Martinez, Luis},
+  year      = {2018},
+  month     = {aug},
+  comment   = {UPV may-ago 18}
 }
 
-@unpublished{course2018c,
-  title   = {Cómputo en Dispositivos Móviles},
-  year    = {2018},
-  month   = {8},
-  howpublished = {UPV, may-ago 18}
+@misc{Martinez2018_Introduccion_graficacion_computadora_ene_abr,
+  title     = {Introducción a la Graficación por Computadora},
+  author    = {Martinez, Luis},
+  year      = {2018},
+  month     = {apr},
+  comment   = {UPV ene-abr 18}
 }
 
-@unpublished{course2018d,
-  title   = {Introducción a la Graficación por Computadora},
-  year    = {2018},
-  month   = {12},
-  howpublished = {UPV, sep-dic 18}
+@misc{Martinez2018_Graficacion_computadora_avanzada,
+  title     = {Graficación por Computadora Avanzada},
+  author    = {Martinez, Luis},
+  year      = {2018},
+  month     = {apr},
+  comment   = {UPV ene-abr 18}
 }
 
-@unpublished{course2009e,
-  title   = {Programación Orientada a Objetos},
-  year    = {2009},
-  month   = {12},
-  howpublished = {UPV, sep-dic 09}
+@misc{Martinez2017_Introduccion_graficacion_computadora,
+  title     = {Introducción a la Graficación por Computadora},
+  author    = {Martinez, Luis},
+  year      = {2017},
+  month     = {dec},
+  comment   = {UPV sep-dic 17}
 }
 
-@unpublished{course2009d,
-  title   = {Organización de Computadoras},
-  year    = {2009},
-  month   = {12},
-  howpublished = {UPV, sep-dic 09}
+@misc{Martinez2017_Computo_dispositivos_moviles,
+  title     = {Cómputo en Dispositivos Móviles},
+  author    = {Martinez, Luis},
+  year      = {2017},
+  month     = {aug},
+  comment   = {UPV may-ago 17}
 }
 
-@unpublished{course2009c,
-  title   = {Circuitos Lógicos},
-  year    = {2009},
-  month   = {12},
-  howpublished = {UPV, sep-dic 09}
+@misc{Martinez2017_Graficacion_computadora_avanzada,
+  title     = {Graficación por Computadora Avanzada},
+  author    = {Martinez, Luis},
+  year      = {2017},
+  month     = {apr},
+  comment   = {UPV ene-abr 17}
 }
 
-@unpublished{course2009b,
-  title   = {Inteligencia Artificial},
-  year    = {2009},
-  month   = {6},
-  howpublished = {ITSA, ene-jun 09}
+@misc{Martinez2016_Computo_dispositivos_moviles_sep_dic,
+  title     = {Cómputo en Dispositivos Móviles},
+  author    = {Martinez, Luis},
+  year      = {2016},
+  month     = {dec},
+  comment   = {UPV sep-dic 16}
 }
 
-@unpublished{course2009a,
-  title   = {Interfases},
-  year    = {2009},
-  month   = {6},
-  howpublished = {ITSA, ene-jun 09}
+@misc{Martinez2016_Computo_dispositivos_moviles_may_ago,
+  title     = {Cómputo en Dispositivos Móviles},
+  author    = {Martinez, Luis},
+  year      = {2016},
+  month     = {aug},
+  comment   = {UPV may-ago 16}
 }
 
-@unpublished{course2005a,
-  title   = {Programación de Sistemas I},
-  year    = {2005},
-  month   = {6},
-  howpublished = {ITSA, ene-jun 05}
+@misc{Martinez2016_Graficacion_computadora_avanzada,
+  title     = {Graficación por Computadora Avanzada},
+  author    = {Martinez, Luis},
+  year      = {2016},
+  month     = {apr},
+  comment   = {UPV ene-abr 16}
+}
+
+@misc{Martinez2015_Computo_dispositivos_moviles_sep_dic,
+  title     = {Cómputo en Dispositivos Móviles},
+  author    = {Martinez, Luis},
+  year      = {2015},
+  month     = {dec},
+  comment   = {UPV sep-dic 15}
+}
+
+@misc{Martinez2015_Computo_dispositivos_moviles_may_ago,
+  title     = {Cómputo en Dispositivos Móviles},
+  author    = {Martinez, Luis},
+  year      = {2015},
+  month     = {aug},
+  comment   = {UPV may-ago 15}
+}
+
+@misc{Martinez2014_Computo_dispositivos_moviles_sep_dic,
+  title     = {Cómputo en Dispositivos Móviles},
+  author    = {Martinez, Luis},
+  year      = {2014},
+  month     = {dec},
+  comment   = {UPV sep-dic 14}
+}
+
+@misc{Martinez2014_Sistemas_embebidos_may_ago,
+  title     = {Sistemas Embebidos},
+  author    = {Martinez, Luis},
+  year      = {2014},
+  month     = {aug},
+  comment   = {UPV may-ago 14}
+}
+
+@misc{Martinez2014_Computo_dispositivos_moviles_may_ago,
+  title     = {Cómputo en Dispositivos Móviles},
+  author    = {Martinez, Luis},
+  year      = {2014},
+  month     = {aug},
+  comment   = {UPV may-ago 14}
+}
+
+@misc{Martinez2014_Procesamiento_paralelo_distribuido,
+  title     = {Procesamiento Paralelo y Distribuido},
+  author    = {Martinez, Luis},
+  year      = {2014},
+  month     = {apr},
+  comment   = {UPV ene-abr 14}
+}
+
+@misc{Martinez2014_Graficacion_computadora_avanzada,
+  title     = {Graficación por Computadora Avanzada},
+  author    = {Martinez, Luis},
+  year      = {2014},
+  month     = {apr},
+  comment   = {UPV ene-abr 14}
+}
+
+@misc{Martinez2013_Computo_dispositivos_moviles_sep_dic,
+  title     = {Cómputo en Dispositivos Móviles},
+  author    = {Martinez, Luis},
+  year      = {2013},
+  month     = {dec},
+  comment   = {UPV sep-dic 13}
+}
+
+@misc{Martinez2013_Sistemas_embebidos_may_ago,
+  title     = {Sistemas Embebidos},
+  author    = {Martinez, Luis},
+  year      = {2013},
+  month     = {aug},
+  comment   = {UPV may-ago 13}
+}
+
+@misc{Martinez2013_Computo_dispositivos_moviles_may_ago,
+  title     = {Cómputo en Dispositivos Móviles},
+  author    = {Martinez, Luis},
+  year      = {2013},
+  month     = {aug},
+  comment   = {UPV may-ago 13}
+}
+
+@misc{Martinez2013_Graficacion_computadora_avanzada_may_ago,
+  title     = {Graficación por Computadora Avanzada},
+  author    = {Martinez, Luis},
+  year      = {2013},
+  month     = {aug},
+  comment   = {UPV may-ago 13}
+}
+
+@misc{Martinez2013_Introduccion_graficacion_computadora,
+  title     = {Introducción a la Graficación por Computadora},
+  author    = {Martinez, Luis},
+  year      = {2013},
+  month     = {apr},
+  comment   = {UPV ene-abr 13}
+}
+
+@misc{Martinez2013_Graficacion_computadora_avanzada_ene_abr,
+  title     = {Graficación por Computadora Avanzada},
+  author    = {Martinez, Luis},
+  year      = {2013},
+  month     = {apr},
+  comment   = {UPV ene-abr 13}
+}
+
+@misc{Martinez2012_Introduccion_graficacion_computadora,
+  title     = {Introducción a la Graficación por Computadora},
+  author    = {Martinez, Luis},
+  year      = {2012},
+  month     = {dec},
+  comment   = {UPV ago-dic 12}
+}
+
+@misc{Martinez2012_Sistemas_embebidos,
+  title     = {Sistemas Embebidos},
+  author    = {Martinez, Luis},
+  year      = {2012},
+  month     = {aug},
+  comment   = {UPV may-ago 12}
+}
+
+@misc{Martinez2012_Arquitectura_procesadores,
+  title     = {Arquitectura de Procesadores},
+  author    = {Martinez, Luis},
+  year      = {2012},
+  month     = {apr},
+  comment   = {UPV ene-abr 12}
+}
+
+@misc{Martinez2011_Sistemas_embebidos_ago_dic,
+  title     = {Sistemas Embebidos},
+  author    = {Martinez, Luis},
+  year      = {2011},
+  month     = {dec},
+  comment   = {UPV ago-dic 11}
+}
+
+@misc{Martinez2011_Arquitectura_procesadores,
+  title     = {Arquitectura de Procesadores},
+  author    = {Martinez, Luis},
+  year      = {2011},
+  month     = {dec},
+  comment   = {UPV ago-dic 11}
+}
+
+@misc{Martinez2011_Sistemas_embebidos_may_ago,
+  title     = {Sistemas Embebidos},
+  author    = {Martinez, Luis},
+  year      = {2011},
+  month     = {aug},
+  comment   = {UPV may-ago 11}
+}
+
+@misc{Martinez2010_Arquitectura_procesadores_may_ago,
+  title     = {Arquitectura de Procesadores},
+  author    = {Martinez, Luis},
+  year      = {2010},
+  month     = {aug},
+  comment   = {UPV may-ago 10}
+}
+
+@misc{Martinez2010_Sistemas_operativos,
+  title     = {Sistemas Operativos},
+  author    = {Martinez, Luis},
+  year      = {2010},
+  month     = {aug},
+  comment   = {UPV may-ago 10}
+}
+
+@misc{Martinez2010_Sistemas_embebidos,
+  title     = {Sistemas Embebidos},
+  author    = {Martinez, Luis},
+  year      = {2010},
+  month     = {aug},
+  comment   = {UPV may-ago 10}
+}
+
+@misc{Martinez2010_Arquitectura_procesadores_ene_abr,
+  title     = {Arquitectura de Procesadores},
+  author    = {Martinez, Luis},
+  year      = {2010},
+  month     = {apr},
+  comment   = {UPV ene-abr 10}
+}
+
+@misc{Martinez2010_Programacion_orientada_objetos,
+  title     = {Programación Orientada a Objetos},
+  author    = {Martinez, Luis},
+  year      = {2010},
+  month     = {apr},
+  comment   = {UPV ene-abr 10}
+}
+
+@misc{Martinez2009_Programacion_orientada_objetos,
+  title     = {Programación Orientada a Objetos},
+  author    = {Martinez, Luis},
+  year      = {2009},
+  month     = {dec},
+  comment   = {UPV sep-dic 09}
+}
+
+@misc{Martinez2009_Organizacion_computadoras,
+  title     = {Organización de Computadoras},
+  author    = {Martinez, Luis},
+  year      = {2009},
+  month     = {dec},
+  comment   = {UPV sep-dic 09}
+}
+
+@misc{Martinez2009_Circuitos_logicos,
+  title     = {Circuitos Lógicos},
+  author    = {Martinez, Luis},
+  year      = {2009},
+  month     = {dec},
+  comment   = {UPV sep-dic 09}
+}
+
+@misc{Martinez2009_Inteligencia_artificial,
+  title     = {Inteligencia Artificial},
+  author    = {Martinez, Luis},
+  year      = {2009},
+  month     = {jun},
+  comment   = {ITSA ene-jun 09}
+}
+
+@misc{Martinez2009_Interfases,
+  title     = {Interfases},
+  author    = {Martinez, Luis},
+  year      = {2009},
+  month     = {jun},
+  comment   = {ITSA ene-jun 09}
+}
+
+@misc{Martinez2008_Graficacion_computadora,
+  title     = {Graficación por Computadora},
+  author    = {Martinez, Luis},
+  year      = {2008},
+  month     = {dec},
+  comment   = {ITSA ago-dic 08}
+}
+
+@misc{Martinez2008_Lenguaje_ensamblador,
+  title     = {Lenguaje Ensamblador},
+  author    = {Martinez, Luis},
+  year      = {2008},
+  month     = {dec},
+  comment   = {ITSA ago-dic 08}
+}
+
+@misc{Martinez2008_Inteligencia_artificial,
+  title     = {Inteligencia Artificial},
+  author    = {Martinez, Luis},
+  year      = {2008},
+  month     = {jun},
+  comment   = {ITSA ene-jun 08}
+}
+
+@misc{Martinez2008_Interfases,
+  title     = {Interfases},
+  author    = {Martinez, Luis},
+  year      = {2008},
+  month     = {jun},
+  comment   = {ITSA ene-jun 08}
+}
+
+@misc{Martinez2007_Graficacion_computadora,
+  title     = {Graficación por Computadora},
+  author    = {Martinez, Luis},
+  year      = {2007},
+  month     = {dec},
+  comment   = {ITSA ago-dic 07}
+}
+
+@misc{Martinez2007_Lenguaje_ensamblador,
+  title     = {Lenguaje Ensamblador},
+  author    = {Martinez, Luis},
+  year      = {2007},
+  month     = {dec},
+  comment   = {ITSA ago-dic 07}
+}
+
+@misc{Martinez2007_Interfases,
+  title     = {Interfases},
+  author    = {Martinez, Luis},
+  year      = {2007},
+  month     = {jun},
+  comment   = {ITSA ene-jun 07}
+}
+
+@misc{Martinez2006_Arquitecturas_avanzadas_computadoras,
+  title     = {Arquitecturas Avanzadas de Computadoras},
+  author    = {Martinez, Luis},
+  year      = {2006},
+  month     = {dec},
+  comment   = {UPP sep-dic 06}
+}
+
+@misc{Martinez2006_Herramientas_ofimaticas,
+  title     = {Herramientas Ofimaticas},
+  author    = {Martinez, Luis},
+  year      = {2006},
+  month     = {dec},
+  comment   = {UPP sep-dic 06}
+}
+
+@misc{Martinez2006_Lenguaje_ensamblador,
+  title     = {Lenguaje Ensamblador},
+  author    = {Martinez, Luis},
+  year      = {2006},
+  month     = {dec},
+  comment   = {ITSA ago-dic 06}
+}
+
+@misc{Martinez2006_Programacion_sistemas,
+  title     = {Programación de Sistemas I},
+  author    = {Martinez, Luis},
+  year      = {2006},
+  month     = {aug},
+  comment   = {ITSA jul-ago 06}
+}
+
+@misc{Martinez2006_Arquitectura_computadoras_II,
+  title     = {Arquitectura de Computadoras II},
+  author    = {Martinez, Luis},
+  year      = {2006},
+  month     = {jun},
+  comment   = {ITSA ene-jun 06}
+}
+
+@misc{Martinez2006_Arquitectura_computadoras_I,
+  title     = {Arquitectura de Computadoras I},
+  author    = {Martinez, Luis},
+  year      = {2006},
+  month     = {jun},
+  comment   = {ITSA ene-jun 06}
+}
+
+@misc{Martinez2005_Arquitectura_computadoras_II,
+  title     = {Arquitectura de Computadoras II},
+  author    = {Martinez, Luis},
+  year      = {2005},
+  month     = {dec},
+  comment   = {ITSA ago-dic 05}
+}
+
+@misc{Martinez2005_Sistemas_digitales,
+  title     = {Sistemas Digitales},
+  author    = {Martinez, Luis},
+  year      = {2005},
+  month     = {dec},
+  comment   = {ITSA ago-dic 05}
+}
+
+@misc{Martinez2005_Seminario_sistemas_digitales,
+  title     = {Seminario de Sistemas Digitales y sus Aplicaciones},
+  author    = {Martinez, Luis},
+  year      = {2005},
+  month     = {aug},
+  comment   = {ITSA jul-ago 05}
+}
+
+@misc{Martinez2005_Programacion_sistemas,
+  title     = {Programación de Sistemas I},
+  author    = {Martinez, Luis},
+  year      = {2005},
+  month     = {jun},
+  comment   = {ITSA ene-jun 05}
 }
